--- a/ECommerceSaga.Order.API/appsettings.Development.json
+++ b/ECommerceSaga.Order.API/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "OrderStateDbConnection": "Host=localhost;Port=5432;Database=docker-db;Username=localuser;Password=myStrongPassword123!"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
