add application layer and publisher

--- a/ECommerceSaga.Order.API/ECommerceSaga.Order.API.csproj
+++ b/ECommerceSaga.Order.API/ECommerceSaga.Order.API.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit" Version="8.5.5" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,10 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\ECommerceSaga.Order.Application\ECommerceSaga.Order.Application.csproj" />
     <ProjectReference Include="..\ECommerceSaga.Order.Infrastructure\ECommerceSaga.Order.Infrastructure.csproj" />
   </ItemGroup>
 
